--- a/style/main.css
+++ b/style/main.css
@@ -1,24 +1,38 @@
+body {
+    background-color: rgb(227, 243, 249);
+}
+
 span {
     
     background-color: rgb(227, 243, 249) !important;
     
 }
 
+
+
 #buttonCalculator {
     background-color: hsl(61, 70%, 52%);
     font-size: 16px;
 }
 
-#aaaa {
-    background-color: hsl(204, 63%, 19%) !important;
-    
+#contentGeneralDos {
+    width: 100%;
+   
+}
+
+#contenidoGeneralUno {
+    background-color: hsl(204, 63%, 19%) !important; 
+   width: 100%;
+   align-content: center;
+   
 }
 
 #parrafo {
     font-size: 12px !important;
 }
 
-#contentGeneralModal {
+
+#contentGeneralDos {
     background-color: hsl(204, 63%, 19%) !important;
 }
 
@@ -26,13 +40,30 @@ span {
     border-color: hsl(61, 70%, 52%) !important;
     background-color: hsl(203, 83%, 12%) !important;
 }
-#inputModal1 {
+#inputGeneralDos1 {
     font-size: 30px;
     color:  hsl(61, 70%, 52%);
     background-color: transparent;
 }
-#inputModal2 {
+#inputGeneralDos2 {
     font-size: 30px;
     color:  hsl(61, 70%, 52%);
     background-color: transparent;
+}
+
+
+
+@media (min-width: 768px) {
+    #principal {
+
+    
+        border-radius:5% 5% 5% 5% 
+    }
+    #contenidoGeneralUno {
+        
+        border-radius:0% 5% 5% 15%  
+    }
+    #contentGeneralDos {
+        border-radius:0% 5% 5% 15% 
+    }
 }
