cambios y mejoras en el html, css, js, falta varios cambios

--- a/style/main.css
+++ b/style/main.css
@@ -7,7 +7,9 @@ span {
     background-color: rgb(227, 243, 249) !important;
     
 }
-
+.input-error {
+    border: 2px solid red !important;
+  }
 
 
 #buttonCalculator {
@@ -15,14 +17,11 @@ span {
     font-size: 16px;
 }
 
-#contentGeneralDos {
-    width: 100%;
-   
-}
+
 
 #contenidoGeneralUno {
     background-color: hsl(204, 63%, 19%) !important; 
-   width: 100%;
+   
    align-content: center;
    
 }
@@ -43,12 +42,12 @@ span {
 #inputGeneralDos1 {
     font-size: 30px;
     color:  hsl(61, 70%, 52%);
-    background-color: transparent;
+    background-color: transparent !important;
 }
 #inputGeneralDos2 {
     font-size: 30px;
     color:  hsl(61, 70%, 52%);
-    background-color: transparent;
+    background-color: transparent !important;
 }
 
 
